--- a/public/homepages/hotel/css/hotel-style.css
+++ b/public/homepages/hotel/css/hotel-style.css
@@ -7,6 +7,7 @@
 	border-radius: 4px;
 	margin-bottom: 10px;
 	position: relative;
+	
 }
 
 .room-image img {
@@ -15,6 +16,8 @@
 	opacity: 1;
 	transition: all ease 0.3s;
 	cursor: pointer;
+	height:30vh; 
+    object-fit: cover;
 }
 
 .room-image:hover img {
