--- a/public/homepages/hotel/css/hotel-style.css
+++ b/public/homepages/hotel/css/hotel-style.css
@@ -60,5 +60,5 @@
 .room-details>p {
 	border-bottom: 1px solid #f5f5f5;
 	margin-bottom: 12px;
-	padding-bottom: 10px;
+	/*padding-bottom: 10px;*/
 }
