--- a/src/App.css
+++ b/src/App.css
@@ -345,7 +345,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Dimmed background */
+  background-color: rgba(116, 116, 116, 0.5); /* Dimmed background */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -645,6 +645,11 @@
       transform: translateY(0);
   }
 }
+
+.room:hover .hover-icons {
+  opacity: 1;
+}
+
 
 
 
